--- a/cf_employee_productivity/views/res_config_settings_views.xml
+++ b/cf_employee_productivity/views/res_config_settings_views.xml
@@ -1,11 +1,12 @@
 <odoo>
+    <!-- Vista de configuración de Productividad -->
     <record id="view_cf_employee_productivity_settings" model="ir.ui.view">
         <field name="name">cf.employee.productivity.settings</field>
         <field name="model">res.config.settings</field>
         <field name="inherit_id" ref="base.view_res_config_settings"/>
         <field name="arch" type="xml">
             <xpath expr="//div[@id='settings']" position="inside">
-                <div class="app_settings_block" string="Configuración de productividad">
+                <div class="app_settings_block" string="Configuración de productividad" data-string="Configuración de productividad">
                     <h2>Usuarios contabilizados</h2>
                     <group name="group_cf_employee_productivity_users">
                         <field name="picking_user_ids" widget="many2many_tags"/>
@@ -13,7 +14,7 @@
                         <field name="helpdesk_user_ids" widget="many2many_tags"/>
                     </group>
 
-                    <h2>Notificaciones</h2>
+                    <h2>Notificaciones diarias</h2>
                     <group name="group_cf_employee_productivity_notifications">
                         <field name="send_daily_summary"/>
                         <field name="summary_recipient_ids" widget="many2many_tags"/>
@@ -23,17 +24,19 @@
         </field>
     </record>
 
+    <!-- Acción para abrir esta vista -->
     <record id="action_cf_employee_productivity_settings" model="ir.actions.act_window">
-        <field name="name">Productividad</field>
+        <field name="name">Configuración de Productividad</field>
         <field name="res_model">res.config.settings</field>
         <field name="view_mode">form</field>
         <field name="view_id" ref="view_cf_employee_productivity_settings"/>
         <field name="target">inline</field>
     </record>
 
-    <menuitem id="menu_cf_employee_productivity_root"
-              name="Productividad"
-              sequence="10"
-              parent="base.menu_custom"
+    <!-- Menú principal (solo si no existe ya en productivity_menu.xml) -->
+    <menuitem id="menu_cf_employee_productivity_settings"
+              name="Configuración"
+              parent="menu_productivity_root"
+              sequence="50"
               action="action_cf_employee_productivity_settings"/>
 </odoo>
