--- a/cf_employee_productivity/views/productivity_menu.xml
+++ b/cf_employee_productivity/views/productivity_menu.xml
@@ -1,34 +1,7 @@
 <odoo>
-    <!-- Root application menu -->
-    <menuitem id="menu_cf_app_root"
+    <!-- Menú principal (único icono visible en el dashboard) -->
+    <menuitem id="menu_productivity_root"
               name="Productividad"
-              sequence="15"
-              groups="base.group_user"/>
-              
-    <record id="action_employee_productivity_log" model="ir.actions.act_window">
-        <field name="name">Dashboard Productividad</field>
-        <field name="res_model">employee.productivity.log</field>
-        <field name="view_mode">graph,tree,pivot,kanban,form</field>
-        <field name="context">{'search_default_today': 1}</field>
-    </record>
-
-    <!-- Dashboard entry -->
-    <menuitem id="menu_cf_dashboard"
-              name="Dashboard Productividad"
-              parent="menu_cf_app_root"
-              action="action_employee_productivity_log"
-              sequence="1"/>
-
-    <!-- Logs submenu (list view) -->
-    <record id="action_employee_productivity_log_list" model="ir.actions.act_window">
-        <field name="name">Registros de actividad</field>
-        <field name="res_model">employee.productivity.log</field>
-        <field name="view_mode">tree,form,graph,pivot</field>
-    </record>
-
-    <menuitem id="menu_cf_logs"
-              name="Registros de actividad"
-              parent="menu_cf_app_root"
-              action="action_employee_productivity_log_list"
-              sequence="2"/>
+              sequence="10"
+              web_icon="cf_employee_productivity,static/description/icon.png"/>
 </odoo>
