--- a/cf_productivity/views/res_config_settings_views.xml
+++ b/cf_productivity/views/res_config_settings_views.xml
@@ -1,6 +1,6 @@
 <odoo>
     <record id="view_cf_productivity_settings" model="ir.ui.view">
-        <field name="name">cf.productivity.settings</field>
+        <field name="name">cf.productivity.settings.view</field>
         <field name="model">res.config.settings</field>
         <field name="arch" type="xml">
             <form string="Configuración de Productividad">
@@ -8,26 +8,18 @@
                     <group>
                         <separator string="📦 Usuarios de pedidos a contabilizar" colspan="2"/>
                         <field name="picking_user_ids" widget="many2many_tags"/>
-
                         <separator string="🔧 Usuarios técnicos a contabilizar" colspan="2"/>
                         <field name="repair_user_ids" widget="many2many_tags"/>
-
                         <separator string="🧾 Usuarios de postventa a contabilizar" colspan="2"/>
                         <field name="helpdesk_user_ids" widget="many2many_tags"/>
-
                         <separator string="📧 Notificaciones diarias" colspan="2"/>
                         <field name="send_daily_summary"/>
                         <field name="summary_recipient_ids" widget="many2many_tags"/>
                     </group>
                 </sheet>
-                <footer>
-                    <button string="Guardar" type="object" name="execute" class="btn-primary"/>
-                    <button string="Cancelar" class="btn-secondary" special="cancel"/>
-                </footer>
             </form>
         </field>
     </record>
-
     <record id="action_cf_productivity_settings" model="ir.actions.act_window">
         <field name="name">Configuración de Productividad</field>
         <field name="res_model">res.config.settings</field>
@@ -35,27 +27,4 @@
         <field name="view_id" ref="view_cf_productivity_settings"/>
         <field name="target">inline</field>
     </record>
-
-    <menuitem id="menu_cf_productivity_root"
-              name="Productividad"
-              sequence="10"
-              web_icon="cf_productivity,static/description/icon.png"/>
-
-    <menuitem id="menu_cf_productivity_dashboard"
-              name="Dashboard Productividad"
-              parent="menu_cf_productivity_root"
-              sequence="10"
-              action="action_productivity_dashboard"/>
-
-    <menuitem id="menu_cf_productivity_logs"
-              name="Registros de actividad"
-              parent="menu_cf_productivity_root"
-              sequence="15"
-              action="action_productivity_logs"/>
-
-    <menuitem id="menu_cf_productivity_settings"
-              name="Configuración"
-              parent="menu_cf_productivity_root"
-              sequence="20"
-              action="action_cf_productivity_settings"/>
 </odoo>
