--- a/cf_productivity/views/productivity_views.xml
+++ b/cf_productivity/views/productivity_views.xml
@@ -1,34 +1,12 @@
 <odoo>
-    <record id="view_productivity_log_tree" model="ir.ui.view">
-        <field name="name">productivity.log.tree</field>
-        <field name="model">productivity.log</field>
-        <field name="arch" type="xml">
-            <tree>
-                <field name="date"/>
-                <field name="user_id"/>
-                <field name="type"/>
-                <field name="duration"/>
-                <field name="name"/>
-            </tree>
-        </field>
+    <record id="action_productivity_dashboard" model="ir.actions.act_window">
+        <field name="name">Dashboard Productividad</field>
+        <field name="res_model">cf.productivity.settings</field>
+        <field name="view_mode">tree,form</field>
     </record>
-
-    <record id="view_productivity_log_form" model="ir.ui.view">
-        <field name="name">productivity.log.form</field>
-        <field name="model">productivity.log</field>
-        <field name="arch" type="xml">
-            <form string="Registro de productividad">
-                <sheet>
-                    <group>
-                        <field name="date"/>
-                        <field name="user_id"/>
-                        <field name="type"/>
-                        <field name="duration"/>
-                        <field name="name"/>
-                        <field name="notes"/>
-                    </group>
-                </sheet>
-            </form>
-        </field>
+    <record id="action_productivity_logs" model="ir.actions.act_window">
+        <field name="name">Registros de actividad</field>
+        <field name="res_model">cf.productivity.settings</field>
+        <field name="view_mode">tree,form</field>
     </record>
 </odoo>
