--- a/cf_productivity/views/productivity_views.xml
+++ b/cf_productivity/views/productivity_views.xml
@@ -1,12 +1,13 @@
 <odoo>
     <record id="action_productivity_dashboard" model="ir.actions.act_window">
         <field name="name">Dashboard Productividad</field>
-        <field name="res_model">cf.productivity.settings</field>
-        <field name="view_mode">tree,form</field>
+        <field name="res_model">res.config.settings</field>
+        <field name="view_mode">form</field>
     </record>
+
     <record id="action_productivity_logs" model="ir.actions.act_window">
         <field name="name">Registros de actividad</field>
-        <field name="res_model">cf.productivity.settings</field>
-        <field name="view_mode">tree,form</field>
+        <field name="res_model">res.config.settings</field>
+        <field name="view_mode">form</field>
     </record>
 </odoo>
