--- a/cf_repair_report/views/repair_order_inherit_views.xml
+++ b/cf_repair_report/views/repair_order_inherit_views.xml
@@ -1,4 +1,5 @@
 <odoo>
+    <!-- Reemplazar el botón de finalizar para abrir el wizard -->
     <record id="view_repair_order_inherit_cf" model="ir.ui.view">
         <field name="name">repair.order.inherit.cf</field>
         <field name="model">repair.order</field>
@@ -8,7 +9,8 @@
                 <button name="open_reason_wizard"
                         string="Finalizar reparación"
                         type="object"
-                        class="btn-primary"/>
+                        class="btn-primary"
+                        attrs="{'invisible': [('state','not in', ('under_repair','confirmed'))]}"/>
             </xpath>
         </field>
     </record>
