--- a/cf_repair_report_clean/views/repair_report_views.xml
+++ b/cf_repair_report_clean/views/repair_report_views.xml
@@ -1,4 +1,3 @@
-
 <odoo>
     <record id="view_repair_report_tree_clean" model="ir.ui.view">
         <field name="name">repair.report.tree.clean</field>
@@ -62,3 +61,4 @@
         <field name="search_view_id" ref="view_repair_report_search_clean"/>
         <field name="context">{'search_default_today': 1}</field>
     </record>
+</odoo>
